--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>前端工程师-郭丽</title>
     <link rel="stylesheet" href="./css.css">
 </head>
 <body>
     <!-- 背景音乐
     <audio src=""></audio> -->
+    
     <div id="container">
         <section class="info flex">
             <div class="photo">
                 <div class="photoDetail">
                     <div class="image"><img src="./imgs/photo.png" alt=""></div>
-                    <div class="name">郭女士</div>
+                    <div class="name">郭丽</div>
                     <div class="engName">AURORA</div>
                 </div>
             </div>
@@ -48,7 +49,7 @@
                 </div>
             </div>
         </section>
-        <section class="certificate">
+        <section class="certificate mrAll">
             <div class="title"><span class="angle"></span> <h2>证书<span style="font-size: 16px;">&&</span>自我评价</h2></div><div class="line"></div>
             <div class="details mrTop">
                 <div class="certi">
@@ -64,7 +65,7 @@
                 </div>
             </div>
         </section>
-        <section class="expWork">
+        <section class="expWork mrAll">
             <div class="title"><span class="angle"></span> <h2>工作经历</h2></div><div class="line"></div>
             <div class="firmDetail mrTop">
                 <div class="other flex mrBot">
@@ -72,20 +73,20 @@
                     <div class="item"><b>职位名称：</b>前端工程师</div>
                     <div class="item"><b>在职时间：</b>2018.08到2020.01.23</div>
                 </div>
-                <div class="intro flex mrBot"><b>工作描述：</b><p style="width: 90%;">工作描述内容</p></div>
+                <div class="intro flex mrBot"><span>工作描述：</span><p>工作描述内容</p></div>
             </div>
             <div class="objDetail">
                 <div class="objItem mrTop">
                     <div class="title"><span class="angle"></span> <h3>项目一：react项目</h3></div><div class="line"></div>
                     <div>
                         <div class="objTime mrTop mrBot"><b>项目时间：</b>2019.01-2019.18</div>
-                        <div class="objIntro mrBot flex"><b>项目描述：</b><p>这是两个微信公众号中的相关服务功能，车把仕是关于洗车服务的一个程 序，通过登录进行身份确定，区分用户和洗车服务人员，从而进行页面功 能的调整；油进万家是提供加油服务的一个程序，通过发送短信验证码进 行服务，使用技术 react 框架、redux、dva 框架、umi 框架。</p> </div>
-                        <div class="myWork flex"><b>项目职责：</b><p> 1.与 UI 设计师和后台程序员配合，高效高质地完成前端页面的开发工 作； 2.结合 react 框架、dva 框架、umi 框架完成前端页面的搭建，高 效实现相关功能； 3.与接口组配合完成接口的调用； 4.测试产品，修 复 bug</p></div>
+                        <div class="objIntro mrBot flex"><span>项目描述：</span><p>这是两个微信公众号中的相关服务功能，车把仕是关于洗车服务的一个程 序，通过登录进行身份确定，区分用户和洗车服务人员，从而进行页面功 能的调整；油进万家是提供加油服务的一个程序，通过发送短信验证码进 行服务，使用技术 react 框架、redux、dva 框架、umi 框架。</p> </div>
+                        <div class="myWork flex"><span>项目职责：</span><p> 1.与 UI 设计师和后台程序员配合，高效高质地完成前端页面的开发工 作； 2.结合 react 框架、dva 框架、umi 框架完成前端页面的搭建，高 效实现相关功能； 3.与接口组配合完成接口的调用； 4.测试产品，修 复 bug</p></div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="expSchool">
+        <section class="expSchool mrAll">
             <div class="title"><span class="angle"></span> <h2>校园经历</h2></div><div class="line"></div>
             <div class="details">
                 <div class="item">
